1998-09-23  Chris Lahey  <clahey@umich.edu>

	* src/plugin.c (plugin_parse): Fixed an overwrite bug.

	* README.plugins (Encrypt): Fixed a typo.

1998-09-22  Chris Lahey  <clahey@umich.edu>

	* configure.in: Added plugins/client/Makefile and
	plugins/testselect/Makefile.

1998-09-22  Chris Lahey  <clahey@umich.edu>

	* src/plugin.c, src/plugin.h: Copied from go.  Big changes.  Threaded now.

	* src/gedit.c (setup_callbacks): Added setup_callbacks to put all
	callback initialization in one place.
	: Used the new function everywhere.
	(main): Added thread initialization code.

	* src/gE_plugin_api.c (gE_plugin_program_register): Initialized
	suggested_accelerator to NULL just to make sure that nothing goes
	wrong.

	* src/commands.c: Changed include orders to get it to compile.

1998-09-21  Alex Roberts  <bse@dial.pipex.com>

	* msgbox.c: Fixed sigsegv... something wrong with:
	  gtk_adjustment_set_value(GTK_ADJUSTMENT(text->vadj), value);
	  Does anyone actually use the MessageBox?!
	
	* Fixed so anyone using gtk+ >1.0.5 will pass the configure script
	  (but it won't fully compile, someone has left all glib 1.1.x stuff in
	  which is incompatible with 1.0.x!! ack...)

1998-09-17  Alex Roberts  <bse@dial.pipex.com>

	* gE_prefs_box.c: Hurrah! The prefs dialog box displays in non-Gnome,
	  now to actually get it to work properly ;)

1998-09-12  Alex Roberts  <bse@dial.pipex.com>

	* gE_prefs.c:
	* gE_prefs_box.c: Fixed Font selection bugs...
	

1998-09-12  Alex Roberts  <bse@dial.pipex.com>

	* TODO: Updated with new Prefs Dialog info...

	* menus.c:
	* gE_prefs_box.[ch]: Implemented New preferences Dialog (Gnome only)...
	

1998-09-10  Alex Roberts  <bse@dial.pipex.com>

	* TODO: Minor updates.... btw, wtf is Andy?!
	* gE_prefslib.c: Stopped sigsegv on my system...

1998-09-07  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (plugindir): Move into $(libdir).
	* src/Makefile.am (plugindir): Likewise.

1998-09-02  Evan Lawrence <evan@worldpath.net>
