@@ -1,5 +1,10 @@
 1998-09-23  Chris Lahey  <clahey@umich.edu>
 
+	* diff/diff.c (done): Set up diff.c to send a client_finish before
+	exitting if the window is shut or cancel is hit.
+
+1998-09-23  Chris Lahey  <clahey@umich.edu>
+
 	* plugin_howto: Just updated this a bit.
 
 	* client/client.c (client_init): Fixed an ordering bug where
