@@ -1,5 +1,15 @@
 1998-09-23  Chris Lahey  <clahey@umich.edu>
 
+	* src/plugin.c (plugin_parse): Set up plugin_parse to better
+	handle plugin crashes.  Fixed an overwrite bug that probably
+	wouldn't have manifested but diserved to be fixed.
+
+	* src/gedit.c: Added some bizarre includes to get rid of some
+	warnings.  Called gdk_threads_leave after gtk_main returned, but
+	it probably doesn't matter.
+
+1998-09-23  Chris Lahey  <clahey@umich.edu>
+
 	* src/plugin.c (plugin_parse): Fixed an overwrite bug.
 
 	* README.plugins (Encrypt): Fixed a typo.
